@@ -1,3 +1,7 @@
+2005-04-04  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Added some error checking during some server downtime.
+
 2005-03-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Bug #1156611 fixed. It seems jabberlib changed to
